# brainforge

./: .gitignore  README.md  pyproject.toml
brainforge/builders/: knowledge_builder.py
brainforge/domain/: brain.py  evidence.py  knowledge_unit.py
brainforge/pipelines/: transcript_pipeline.py
brains/jensen/: brain.yaml
brains/jensen/assets/: jensen_intro.md
brains/jensen/assets/metadata/: 001_jensen_future_of_computing.yaml
canon/foundation/: NORTH_STAR.md
canon/rfc/: RFC-0001-Knowledge-Extraction.md
examples/: 01_import_jensen.py
tests/: test_knowledge_builder.py  test_transcript_forge.py
